# Celestiax

./: .gitattributes  allfiles.txt  readme.md
backend/: .dockerignore  .env  Cargo.toml  Dockerfile  Procfile  docker-compose.yml  dump.rdb  render.yaml
backend/src/: main.rs
backend/src/api/: mod.rs  routes.rs
backend/src/api/handlers/: algorand.rs  bitcoin.rs  ethereum.rs  mod.rs  transaction.rs
backend/src/api/models/: algorand.rs  bitcoin.rs  ethereum.rs  mod.rs  transaction.rs
backend/src/git/: mod.rs
backend/src/redis/: publisher.rs  subscriber.rs
backend/src/services/: crypto_api.rs  mod.rs  pubsub.rs  transaction.rs  websocket.rs
frontend/: .eslintrc.json  next.config.ts  package-lock.json  package.json  tsconfig.json
frontend/app/: global.d.ts  layout.tsx  page.tsx
frontend/app/api/: api.ts  constant.ts
frontend/app/components/: CrptoDropdown.tsx  CryptoButton.tsx  CryptoIcon.tsx  Globedemo.tsx  header.tsx  worldmapdemo.tsx
frontend/app/components/layout/: index.tsx
frontend/app/components/ui/: Search.txt  SearchBar.tsx  button.tsx  example-generations.tsx  flickeringlight.txt  footer.tsx  globe.tsx  load.tsx  loader.tsx  swipe-up-indicator.tsx  time-indicator.tsx  visualizations-count.tsx  world-map.tsx
frontend/app/hooks/: use-scroll.ts  useStore.ts
frontend/app/lib/: redis.ts.ts
frontend/app/pages/: _app.tsx  index.tsx
frontend/app/types/: coinUtils.ts  types.d.ts
frontend/app/utils/: api.ts
frontend/public/example-video/: algorand-example.mov  bitcoin-example.mov  ethereum-example.mov
(+16 files in other folders)
