[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }
redis = { version = "0.27.6", features = ["aio", "tokio-comp"] }
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
rand = "0.8"
serde_json = "1.0"
actix-cors = "0.7"  # make sure to use the correct version
git2 = "0.14"
reqwest = { version = "0.11", features = ["json"] }
chrono-tz = "0.6"
dotenv = "0.15" # or the latest version
futures-util = "0.3"


[[bin]]
name = "backend"
path = "src/main.rs"